--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -307,7 +307,7 @@
 
         <div class="create-account">
             <small>
-                Already have an account? <a href="#" class="form-create-data">Login</a>
+                Already have an account? <a href="#" class="form-create-data" hx-get="/login_page" hx-target="body" hx-push-url="true">Login</a>
             </small>
         </div>
 
