--- a/frontend/templates/user-profile.html
+++ b/frontend/templates/user-profile.html
@@ -432,15 +432,15 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item main">
                     <div class="label">Total Value</div>
-                    <div class="value-large">$22,348.77</div>
+                    <div class="value-large" id="total-value">{{ portfolio.get_display_data.total_added_money }}</div>
                 </div>
                 <div class="portfolio-item">
                     <div class="label">Available Cash</div>
-                    <div class="value-medium">$19,236.35</div>
+                    <div class="value-medium">{{ portfolio.get_display_data.avaliable_money }}</div>
                 </div>
                 <div class="portfolio-item">
                     <div class="label">Total Added</div>
-                    <div class="value-medium">$22,222.00</div>
+                    <div class="value-medium">{{ portfolio.get_display_data.total_added_money }}</div>
                 </div>
                 <div class="portfolio-item">
                     <div class="label">Performance</div>
