--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -304,15 +304,20 @@
 
         <!-- Форма логина -->
         <div class="login-form">
+            <form method="post" action="/login">  <!-- ⚠️ формируем контейнер с данными -->
+
             <div class="form-group">
                 <label class="form-label">Login</label>
-                <input type="text" class="form-input" placeholder="user_access">
+                <input type="text" class="form-input" name="username" placeholder="user_access" required> <!-- ⚠️ -->
             </div>
             <div class="form-group">
                 <label class="form-label">Password</label>
-                <input type="password" class="form-input" placeholder="••••••••">
+                <input type="password" class="form-input" name="password" placeholder="••••••••" required> <!-- ⚠️ -->
             </div>
-            <button class="login-btn">Authenticate</button>
+
+            <button type="submit" class="login-btn">Authenticate</button> <!-- ⚠️ -->
+
+            </form>
         </div>
 
         <!-- Панель Под Формой Логина -->
