--- a/frontend/templates/user-profile.html
+++ b/frontend/templates/user-profile.html
@@ -421,7 +421,10 @@
             <div class="text-end">
                 <div class="terminal-subtitle">#INDCws34</div>
                 <div class="terminal-subtitle">アメリカ製1984</div>
-                <button class="logout-btn">Logout</button>
+
+                <form action="/logout" method="post">
+                    <button type="submit" class="logout-btn">Logout</button>
+                </form>
             </div>
         </div>
 
