--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -313,7 +313,9 @@
                 <input type="text" class="form-input" name="email" placeholder="Email_address" required> <!-- ⚠️ -->
             </div>
             <div class="form-group">
+
                 <label class="form-label">Login</label>
+
                 <input type="text" class="form-input" name="username" placeholder="Create_a_username" required> <!-- ⚠️ -->
             </div>
             <div class="form-group">
@@ -328,7 +330,7 @@
          <!--  -->
         <div class="create-account">
             <small>
-                Already have an account? <a href="#" class="form-create-data" hx-get="/login_page" hx-target="body" hx-push-url="true">Login</a>
+                Already have an account? <a href="/" class="form-create-data">Login</a>
             </small>
         </div>
 
